Remove endpot/camunda-rest-client dependency. Implement the first few requests. Add UsageExample.php.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   ],
   "require": {
     "php": "^7.4.0",
-    "endpot/camunda-rest-client": "^1.1.5",
+    "ext-json": "*",
+    "guzzlehttp/guzzle": "^6.3",
     "psr/log": "^1.1"
   },
   "config": {
