--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     }
   ],
   "require": {
-    "php": "^7.4.0",
+    "php": ">=7.4 <8.1",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^6.3",
+    "guzzlehttp/guzzle": ">=6.3 <7.4",
     "psr/log": "^1.1"
   },
   "config": {
