--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     }
   ],
   "require": {
-    "php": ">=7.4 <8.1",
+    "php": ">=7.4 <8.2",
     "ext-json": "*",
     "guzzlehttp/guzzle": ">=6.3 <7.4",
-    "psr/log": "^1.1"
+    "psr/log": ">=1.1"
   },
   "config": {
     "preferred-install": {
