Add Monolog to Composer require-dev dependencies. Add activityIdIn parameter to CamundaProcessInstanceGetListRequest. Add CamundaProcessInstanceHistoryService.

--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,8 @@
     "psr-4": {
       "StrehleDe\\CamundaClient\\": "src/"
     }
+  },
+  "require-dev": {
+    "monolog/monolog": "^3.3"
   }
 }
